pkg/synthesis/tests_expected_output/k8s_resources/ExampleExternalSimpleWithInterlDenyAllowAdmin_NoHint_AdminPoliciesEnabled/adminPolicies.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: Admin Network Policy To Allow Egress Access To DNS Server
        nsx-id: none
    creationTimestamp: null
    name: egress-dns-policy
spec:
    egress:
        - action: Allow
          ports:
            - portNumber:
                port: 53
                protocol: UDP
          to:
            - pods:
                namespaceSelector: {}
                podSelector:
                    matchExpressions:
                        - key: k8s-app
                          operator: In
                          values:
                            - kube-dns
    priority: 1
    subject:
        pods:
            namespaceSelector:
                matchLabels:
                    kubernetes.io/metadata.name: default
            podSelector: {}
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(deny: (src: (IP addr in 1.2.0.0/30) dst: (group = frontend) conn: TCP)'
        nsx-id: "1004"
    creationTimestamp: null
    name: admin-policy-1
spec:
    ingress:
        - action: Deny
          from:
            - pods:
                namespaceSelector:
                    matchLabels:
                        kubernetes.io/metadata.name: default
                podSelector:
                    matchExpressions:
                        - key: to-NLCimplement
                          operator: Exists
          ports:
            - portRange:
                end: 65535
                protocol: TCP
                start: 1
    priority: 2
    subject:
        pods:
            namespaceSelector:
                matchLabels:
                    kubernetes.io/metadata.name: default
            podSelector:
                matchExpressions:
                    - key: group__frontend
                      operator: Exists
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(allow: (src: (IP addr in 1.2.0.0/24) dst: (group = frontend) conn: TCP)'
        nsx-id: "1005"
    creationTimestamp: null
    name: admin-policy-2
spec:
    ingress:
        - action: Allow
          from:
            - pods:
                namespaceSelector:
                    matchLabels:
                        kubernetes.io/metadata.name: default
                podSelector:
                    matchExpressions:
                        - key: to-NLCimplement
                          operator: Exists
          ports:
            - portRange:
                end: 65535
                protocol: TCP
                start: 1
    priority: 3
    subject:
        pods:
            namespaceSelector:
                matchLabels:
                    kubernetes.io/metadata.name: default
            podSelector:
                matchExpressions:
                    - key: group__frontend
                      operator: Exists
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(deny: (src: (IP addr in 1.2.0.0/24) dst: (group = frontend) conn: All Connections)'
        nsx-id: "1006"
    creationTimestamp: null
    name: admin-policy-3
spec:
    ingress:
        - action: Deny
          from:
            - pods:
                namespaceSelector:
                    matchLabels:
                        kubernetes.io/metadata.name: default
                podSelector:
                    matchExpressions:
                        - key: to-NLCimplement
                          operator: Exists
          ports: null
    priority: 4
    subject:
        pods:
            namespaceSelector:
                matchLabels:
                    kubernetes.io/metadata.name: default
            podSelector:
                matchExpressions:
                    - key: group__frontend
                      operator: Exists
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(allow: (src: (IP addr in 1.2.0.0/16) dst: (group = frontend) conn: All Connections)'
        nsx-id: "1007"
    creationTimestamp: null
    name: admin-policy-4
spec:
    ingress:
        - action: Allow
          from:
            - pods:
                namespaceSelector:
                    matchLabels:
                        kubernetes.io/metadata.name: default
                podSelector:
                    matchExpressions:
                        - key: to-NLCimplement
                          operator: Exists
          ports: null
    priority: 5
    subject:
        pods:
            namespaceSelector:
                matchLabels:
                    kubernetes.io/metadata.name: default
            podSelector:
                matchExpressions:
                    - key: group__frontend
                      operator: Exists
status:
    conditions: null
