pkg/synthesis/tests_expected_output/k8s_resources/ExampleExternalSimpleWithInterlDenyAllowAdmin_NoHint_AdminPoliciesEnabled/policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (IP addr in 1.240.0.0/28) dst: (group = frontend) conn: ICMP,UDP'
        nsx-id: "1009"
    name: policy-0
    namespace: default
spec:
    ingress:
        - from:
            - ipBlock:
                cidr: 1.240.0.0/28
          ports:
            - protocol: UDP
    podSelector:
        matchExpressions:
            - key: group__frontend
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: default deny policy for namespace default
        nsx-id: "1003"
    name: default-deny-for-default
    namespace: default
spec:
    podSelector: {}
    policyTypes:
        - Ingress
        - Egress
